--- a/package.json
+++ b/package.json
@@ -27,5 +27,12 @@
     "ts-jest": "^29.2.4",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4"
-  }
+  },
+  "files": [
+    "dist/",
+    "README.md"
+  ],
+  "publishConfig": {
+		"access": "public"
+	}
 }
